trying with my styles and new div not the vite page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Brett</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="div1">
+    <p class="p1"> Hello World! </p>
+  </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
